Expose typed gift settings rows